--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,37 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="liked_recipes">Liked Recipes</string>
+    <string name="login">Login</string>
+    <string name="login_now">Login Now</string>
+    <string name="to_register">To register page</string>
+    <string name="liked_list_picture">Liked list picture</string>
+    <string name="log_out_button_picture">Log out button picture</string>
+    <string name="recipe_name">Recipe name</string>
+    <string name="source">Source</string>
+    <string name="summary">Summary</string>
+    <string name="ingredients">Ingredients</string>
+    <string name="similar_recipes">Similar Recipes</string>
+    <string name="meal_image">meal image</string>
+    <string name="register">Register</string>
+    <string name="to_login_page">To login page</string>
+    <string name="instructions">Instructions</string>
+    <string name="item">Item</string>
+    <string name="instructions_picture">instructions picture</string>
+    <string name="_1">1</string>
+    <string name="step_name">Step Name</string>
+    <string name="equipments">Equipments</string>
+    <string name="dish_name">Dish Name</string>
+    <string name="_2_persons">2 Persons</string>
+    <string name="start_picture">start picture</string>
+    <string name="time_pic">time pic</string>
+    <string name="servings">servings</string>
+    <string name="food2">food2</string>
+    <string name="_1_pc">1 pc</string>
+    <string name="veggies">Veggies</string>
+    <string name="like">Like</string>
+    <string name="similar_name">Similar Name</string>
+    <string name="menu">Menu</string>
 
 
 </resources>
